[tool.poetry]
name = "hw-20-1"
version = "0.1.0"
description = ""
authors = ["Nikita <nikita@mer1d1an.ru>"]
readme = "README.md"
packages = [{include = "hw_20"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
black = "^24.4.2"
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
